--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ic| 1751215681.py:15 in <module>- torch.__version__: 1.13.1\n"
+      "ic| torch.__version__: '1.13.1'\n"
      ]
     },
     {
@@ -72,29 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "04-16 07:02:24 attrs.py 77: Creating converter from 3 to 5\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "Index(['COL1A1', 'COL1A2', 'PPY', 'CTRB1', 'CELA3A', 'CTRB2', 'SPINK1',\n",
-      "       'COL3A1', 'CPB1', 'COL6A3',\n",
-      "       ...\n",
-      "       'DUSP19', 'ZNF160', 'NPRL2', 'CILP2', 'SNED1', 'FAM110D', 'SELL',\n",
-      "       'C9orf135', 'GRIN2D', 'HERC5'],\n",
-      "      dtype='object', length=3000)\n",
+      "Index(['COL1A1', 'COL1A2', 'PPY', 'CTRB1', 'CELA3A'], dtype='object')\n",
       "Index(['human1_lib1.final_cell_0001', 'human1_lib1.final_cell_0003',\n",
       "       'human1_lib1.final_cell_0004', 'human1_lib1.final_cell_0005',\n",
-      "       'human1_lib1.final_cell_0006', 'human1_lib1.final_cell_0008',\n",
-      "       'human1_lib1.final_cell_0009', 'human1_lib1.final_cell_0010',\n",
-      "       'human1_lib1.final_cell_0011', 'human1_lib1.final_cell_0012',\n",
-      "       ...\n",
-      "       'D30-8_85', 'D30-8_86', 'D30-8_87', 'D30-8_88', 'D30-8_89', 'D30-8_90',\n",
-      "       'D30-8_91', 'D30-8_92', 'D30-8_93', 'D30-8_94'],\n",
-      "      dtype='object', length=10600)\n",
+      "       'human1_lib1.final_cell_0006'],\n",
+      "      dtype='object')\n",
       "View of AnnData object with n_obs × n_vars = 10600 × 3000\n",
       "    obs: 'Celltype'\n",
       "    var: 'Gene Symbol'\n",
@@ -122,15 +118,14 @@
    "source": [
     "data_dir = Path('data')\n",
     "data_file = data_dir / 'demo_train.h5ad'\n",
-    "print(data_file.is_file())\n",
     "ref_adata = sc.read(data_dir / 'demo_train.h5ad')\n",
-    "print(ref_adata.var_names)\n",
-    "print(ref_adata.obs_names)\n",
-    "# print(ref_adata)\n",
+    "print(ref_adata.var_names[:5])\n",
+    "print(ref_adata.obs_names[:5])\n",
     "# view of the data\n",
     "ref_adata = ref_adata[:, ref_adata.var_names]\n",
     "print(ref_adata)\n",
     "print(ref_adata.obs.Celltype.value_counts())\n",
+    "\n",
     "a = ref_adata[['human1_lib1.final_cell_0001', 'human1_lib1.final_cell_0003'], ['COL1A1', 'COL1A2', 'PPY', 'CTRB1']]\n",
     "print(a)\n",
     "b = a.X.toarray().tolist()\n",
