--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,10 +32,8 @@
     "from pandas import DataFrame\n",
     "import os, sys\n",
     "import torch\n",
-    "from icecream import ic\n",
     "import TOSICA \n",
     "\n",
-    "ic(torch.__version__)\n",
     "print(sys.path)\n"
    ]
   },
@@ -72,16 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "04-16 07:02:24 attrs.py 77: Creating converter from 3 to 5\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -141,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +153,8 @@
       "epsilon            7\n",
       "mast               7\n",
       "MHC class II       5\n",
-      "Name: Celltype, dtype: int64\n"
+      "Name: Celltype, dtype: int64\n",
+      "<class 'pandas.core.series.Series'>\n"
      ]
     }
    ],
@@ -170,7 +162,8 @@
     "query_adata = sc.read(data_dir / 'demo_test.h5ad')\n",
     "query_adata = query_adata[:,ref_adata.var_names]\n",
     "print(query_adata)\n",
-    "print(query_adata.obs.Celltype.value_counts())"
+    "print(query_adata.obs.Celltype.value_counts())\n",
+    "print(type(query_adata.var['Gene Symbol']))"
    ]
   },
   {
