--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ic| torch.__version__: '1.13.1'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['d:\\\\codes\\\\TOSICA', 'c:\\\\Users\\\\qc_do\\\\anaconda3\\\\envs\\\\py39\\\\python39.zip', 'c:\\\\Users\\\\qc_do\\\\anaconda3\\\\envs\\\\py39\\\\DLLs', 'c:\\\\Users\\\\qc_do\\\\anaconda3\\\\envs\\\\py39\\\\lib', 'c:\\\\Users\\\\qc_do\\\\anaconda3\\\\envs\\\\py39', '', 'c:\\\\Users\\\\qc_do\\\\anaconda3\\\\envs\\\\py39\\\\lib\\\\site-packages', 'c:\\\\Users\\\\qc_do\\\\anaconda3\\\\envs\\\\py39\\\\lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\qc_do\\\\anaconda3\\\\envs\\\\py39\\\\lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\qc_do\\\\anaconda3\\\\envs\\\\py39\\\\lib\\\\site-packages\\\\Pythonwin']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import scanpy as sc\n",
     "import numpy as np\n",
@@ -33,8 +18,8 @@
     "import os, sys\n",
     "import torch\n",
     "import TOSICA \n",
-    "\n",
-    "print(sys.path)\n"
+    "from icecream import ic\n",
+    "ic.configureOutput(includeContext=True, argToStringFunction=lambda _: str(_))\n"
    ]
   },
   {
@@ -70,9 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "04-18 21:06:38 attrs.py 77: Creating converter from 3 to 5\n",
+      "ic| 3701846396.py:7 in <module>- len(gene_names): 3000\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -107,9 +100,13 @@
     }
    ],
    "source": [
-    "data_dir = Path('data')\n",
+    "root_data_dir = Path('data')\n",
+    "data_type = 'hPancreas'\n",
+    "data_dir = root_data_dir / data_type\n",
     "data_file = data_dir / 'demo_train.h5ad'\n",
     "ref_adata = sc.read(data_dir / 'demo_train.h5ad')\n",
+    "gene_names = set(ref_adata.var_names)\n",
+    "ic(len(gene_names))\n",
     "print(ref_adata.var_names[:5])\n",
     "print(ref_adata.obs_names[:5])\n",
     "# view of the data\n",
