--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
       "mast               7\n",
       "MHC class II       5\n",
       "Name: Celltype, dtype: int64\n",
-      "<class 'pandas.core.series.Series'>\n"
+      "(4218, 3000)\n"
      ]
     }
    ],
@@ -160,7 +160,8 @@
     "query_adata = query_adata[:,ref_adata.var_names]\n",
     "print(query_adata)\n",
     "print(query_adata.obs.Celltype.value_counts())\n",
-    "print(type(query_adata.var['Gene Symbol']))"
+    "print(query_adata.shape)\n",
+    "# type(query_adata.var['Gene Symbol'])) is Series"
    ]
   },
   {
