--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -244,6 +244,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the X data in predicted new_adata is the attention weight, thats 4218 * 299, the 299 pathways has most genes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
