--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,11 @@
     "from pandas import DataFrame\n",
     "import os, sys\n",
     "import torch\n",
-    "import TOSICA \n",
+    "import TOSICA\n",
     "from icecream import ic\n",
-    "ic.configureOutput(includeContext=True, argToStringFunction=lambda _: str(_))\n"
+    "ic.configureOutput(includeContext=True, argToStringFunction=lambda _: str(_))\n",
+    "from utils.log_util import logger\n",
+    "\n"
    ]
   },
   {
@@ -43,7 +45,7 @@
     }
    ],
    "source": [
-    "# print(torch.cuda.get_device_capability(device=None),  torch.cuda.get_device_name(device=None))"
+    "# logger.info(torch.cuda.get_device_capability(device=None),  torch.cuda.get_device_name(device=None))"
    ]
   },
   {
@@ -55,29 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04-18 21:06:38 attrs.py 77: Creating converter from 3 to 5\n",
-      "ic| 3701846396.py:7 in <module>- len(gene_names): 3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['COL1A1', 'COL1A2', 'PPY', 'CTRB1', 'CELA3A'], dtype='object')\n",
-      "Index(['human1_lib1.final_cell_0001', 'human1_lib1.final_cell_0003',\n",
+      "04-28 05:48:07 2139450683.py 7: 3000\n",
+      "04-28 05:48:07 2139450683.py 8: Index(['COL1A1', 'COL1A2', 'PPY', 'CTRB1', 'CELA3A'], dtype='object')\n",
+      "04-28 05:48:07 2139450683.py 9: Index(['human1_lib1.final_cell_0001', 'human1_lib1.final_cell_0003',\n",
       "       'human1_lib1.final_cell_0004', 'human1_lib1.final_cell_0005',\n",
       "       'human1_lib1.final_cell_0006'],\n",
       "      dtype='object')\n",
-      "View of AnnData object with n_obs × n_vars = 10600 × 3000\n",
+      "04-28 05:48:07 2139450683.py 12: View of AnnData object with n_obs × n_vars = 10600 × 3000\n",
       "    obs: 'Celltype'\n",
       "    var: 'Gene Symbol'\n",
+      "04-28 05:48:07 2139450683.py 13: Celltype\n",
       "alpha          3136\n",
       "beta           2966\n",
       "ductal         1290\n",
@@ -91,11 +87,11 @@
       "epsilon          21\n",
       "schwann          13\n",
       "t_cell            7\n",
-      "Name: Celltype, dtype: int64\n",
-      "View of AnnData object with n_obs × n_vars = 2 × 4\n",
+      "Name: count, dtype: int64\n",
+      "04-28 05:48:07 2139450683.py 16: View of AnnData object with n_obs × n_vars = 2 × 4\n",
       "    obs: 'Celltype'\n",
       "    var: 'Gene Symbol'\n",
-      "[[0.0, 0.0, 1.0241609811782837, 5.755773067474365], [0.0, 0.0, 0.7810583114624023, 6.0262041091918945]]\n"
+      "04-28 05:48:07 2139450683.py 18: [[0.0, 0.0, 1.0241609811782837, 5.755773067474365], [0.0, 0.0, 0.7810583114624023, 6.0262041091918945]]\n"
      ]
     }
    ],
@@ -106,18 +102,18 @@
     "data_file = data_dir / 'demo_train.h5ad'\n",
     "ref_adata = sc.read(data_dir / 'demo_train.h5ad')\n",
     "gene_names = set(ref_adata.var_names)\n",
-    "ic(len(gene_names))\n",
-    "print(ref_adata.var_names[:5])\n",
-    "print(ref_adata.obs_names[:5])\n",
+    "logger.info(len(gene_names))\n",
+    "logger.info(ref_adata.var_names[:5])\n",
+    "logger.info(ref_adata.obs_names[:5])\n",
     "# view of the data\n",
     "ref_adata = ref_adata[:, ref_adata.var_names]\n",
-    "print(ref_adata)\n",
-    "print(ref_adata.obs.Celltype.value_counts())\n",
+    "logger.info(ref_adata)\n",
+    "logger.info(ref_adata.obs.Celltype.value_counts())\n",
     "\n",
     "a = ref_adata[['human1_lib1.final_cell_0001', 'human1_lib1.final_cell_0003'], ['COL1A1', 'COL1A2', 'PPY', 'CTRB1']]\n",
-    "print(a)\n",
+    "logger.info(a)\n",
     "b = a.X.toarray().tolist()\n",
-    "print(b)"
+    "logger.info(b)"
    ]
   },
   {
@@ -129,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +135,7 @@
       "View of AnnData object with n_obs × n_vars = 4218 × 3000\n",
       "    obs: 'Celltype'\n",
       "    var: 'Gene Symbol'\n",
+      "Celltype\n",
       "alpha           2011\n",
       "beta            1006\n",
       "ductal           414\n",
@@ -150,7 +147,7 @@
       "epsilon            7\n",
       "mast               7\n",
       "MHC class II       5\n",
-      "Name: Celltype, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "(4218, 3000)\n"
      ]
     }
@@ -158,9 +155,9 @@
    "source": [
     "query_adata = sc.read(data_dir / 'demo_test.h5ad')\n",
     "query_adata = query_adata[:,ref_adata.var_names]\n",
-    "print(query_adata)\n",
-    "print(query_adata.obs.Celltype.value_counts())\n",
-    "print(query_adata.shape)\n",
+    "logger.info(query_adata)\n",
+    "logger.info(query_adata.obs.Celltype.value_counts())\n",
+    "logger.info(query_adata.shape)\n",
     "# type(query_adata.var['Gene Symbol'])) is Series"
    ]
   },
@@ -398,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
