--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,10 @@
     "from icecream import ic\n",
     "ic.configureOutput(includeContext=True, argToStringFunction=lambda _: str(_))\n",
     "from utils.log_util import logger\n",
-    "\n"
+    "\n",
+    "root_data_dir = Path('data')\n",
+    "data_type = 'hPancreas'\n",
+    "data_dir = root_data_dir / data_type"
    ]
   },
   {
@@ -96,9 +99,6 @@
     }
    ],
    "source": [
-    "root_data_dir = Path('data')\n",
-    "data_type = 'hPancreas'\n",
-    "data_dir = root_data_dir / data_type\n",
     "data_file = data_dir / 'demo_train.h5ad'\n",
     "ref_adata = sc.read(data_dir / 'demo_train.h5ad')\n",
     "gene_names = set(ref_adata.var_names)\n",
@@ -125,17 +125,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "View of AnnData object with n_obs × n_vars = 4218 × 3000\n",
+      "23-04-30 10:52 2863434096.py 2: Index(['COL1A1', 'COL1A2', 'PPY', 'CTRB1', 'CELA3A', 'CTRB2', 'SPINK1',\n",
+      "       'COL3A1', 'CPB1', 'COL6A3',\n",
+      "       ...\n",
+      "       'DUSP19', 'ZNF160', 'NPRL2', 'CILP2', 'SNED1', 'FAM110D', 'SELL',\n",
+      "       'C9orf135', 'GRIN2D', 'HERC5'],\n",
+      "      dtype='object', length=3000)\n",
+      "23-04-30 10:52 2863434096.py 4: View of AnnData object with n_obs × n_vars = 4218 × 3000\n",
       "    obs: 'Celltype'\n",
       "    var: 'Gene Symbol'\n",
-      "Celltype\n",
+      "23-04-30 10:52 2863434096.py 5: query_adata.obs.Celltype\n",
+      "10th_C11_S96    beta\n",
+      "10th_C13_S61    beta\n",
+      "10th_C14_S53    beta\n",
+      "10th_C17_S97    beta\n",
+      "10th_C19_S62     PSC\n",
+      "                ... \n",
+      "Sample_1594       PP\n",
+      "Sample_1595       PP\n",
+      "Sample_1597       PP\n",
+      "Sample_1598       PP\n",
+      "Sample_1600       PP\n",
+      "Name: Celltype, Length: 4218, dtype: category\n",
+      "Categories (11, object): ['MHC class II', 'PP', 'PSC', 'acinar', ..., 'ductal', 'endothelial', 'epsilon', 'mast']\n",
+      "23-04-30 10:52 2863434096.py 6: Celltype\n",
       "alpha           2011\n",
       "beta            1006\n",
       "ductal           414\n",
@@ -148,14 +168,16 @@
       "mast               7\n",
       "MHC class II       5\n",
       "Name: count, dtype: int64\n",
-      "(4218, 3000)\n"
+      "23-04-30 10:52 2863434096.py 7: (4218, 3000)\n"
      ]
     }
    ],
    "source": [
     "query_adata = sc.read(data_dir / 'demo_test.h5ad')\n",
-    "query_adata = query_adata[:,ref_adata.var_names]\n",
+    "logger.info('%s', query_adata.var_names)\n",
+    "query_adata = query_adata[:, query_adata.var_names]\n",
     "logger.info(query_adata)\n",
+    "logger.info('query_adata.obs.Celltype\\n%s', query_adata.obs.Celltype)\n",
     "logger.info(query_adata.obs.Celltype.value_counts())\n",
     "logger.info(query_adata.shape)\n",
     "# type(query_adata.var['Gene Symbol'])) is Series"
