--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -125,23 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23-04-30 10:52 2863434096.py 2: Index(['COL1A1', 'COL1A2', 'PPY', 'CTRB1', 'CELA3A', 'CTRB2', 'SPINK1',\n",
+      "23-04-30 15:46 2019134934.py 2: Index(['COL1A1', 'COL1A2', 'PPY', 'CTRB1', 'CELA3A', 'CTRB2', 'SPINK1',\n",
       "       'COL3A1', 'CPB1', 'COL6A3',\n",
       "       ...\n",
       "       'DUSP19', 'ZNF160', 'NPRL2', 'CILP2', 'SNED1', 'FAM110D', 'SELL',\n",
       "       'C9orf135', 'GRIN2D', 'HERC5'],\n",
       "      dtype='object', length=3000)\n",
-      "23-04-30 10:52 2863434096.py 4: View of AnnData object with n_obs × n_vars = 4218 × 3000\n",
+      "23-04-30 15:46 2019134934.py 4: View of AnnData object with n_obs × n_vars = 4218 × 3000\n",
       "    obs: 'Celltype'\n",
       "    var: 'Gene Symbol'\n",
-      "23-04-30 10:52 2863434096.py 5: query_adata.obs.Celltype\n",
+      "23-04-30 15:46 2019134934.py 5: query_adata.obs.Celltype\n",
       "10th_C11_S96    beta\n",
       "10th_C13_S61    beta\n",
       "10th_C14_S53    beta\n",
@@ -155,7 +155,22 @@
       "Sample_1600       PP\n",
       "Name: Celltype, Length: 4218, dtype: category\n",
       "Categories (11, object): ['MHC class II', 'PP', 'PSC', 'acinar', ..., 'ductal', 'endothelial', 'epsilon', 'mast']\n",
-      "23-04-30 10:52 2863434096.py 6: Celltype\n",
+      "23-04-30 15:46 2019134934.py 6: query_adata.var\n",
+      "         Gene Symbol\n",
+      "COL1A1        COL1A1\n",
+      "COL1A2        COL1A2\n",
+      "PPY              PPY\n",
+      "CTRB1          CTRB1\n",
+      "CELA3A        CELA3A\n",
+      "...              ...\n",
+      "FAM110D      FAM110D\n",
+      "SELL            SELL\n",
+      "C9orf135    C9orf135\n",
+      "GRIN2D        GRIN2D\n",
+      "HERC5          HERC5\n",
+      "\n",
+      "[3000 rows x 1 columns]\n",
+      "23-04-30 15:46 2019134934.py 7: Celltype\n",
       "alpha           2011\n",
       "beta            1006\n",
       "ductal           414\n",
@@ -168,7 +183,7 @@
       "mast               7\n",
       "MHC class II       5\n",
       "Name: count, dtype: int64\n",
-      "23-04-30 10:52 2863434096.py 7: (4218, 3000)\n"
+      "23-04-30 15:46 2019134934.py 8: (4218, 3000)\n"
      ]
     }
    ],
@@ -178,6 +193,7 @@
     "query_adata = query_adata[:, query_adata.var_names]\n",
     "logger.info(query_adata)\n",
     "logger.info('query_adata.obs.Celltype\\n%s', query_adata.obs.Celltype)\n",
+    "logger.info('query_adata.var\\n%s', query_adata.var)\n",
     "logger.info(query_adata.obs.Celltype.value_counts())\n",
     "logger.info(query_adata.shape)\n",
     "# type(query_adata.var['Gene Symbol'])) is Series"
