--- a/test/tutorial.ipynb
+++ b/test/tutorial.ipynb
@@ -336,7 +336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('sc': conda)",
+   "display_name": "Python 3.9.13 ('py39')",
    "language": "python",
    "name": "python3"
   },
@@ -350,12 +350,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36c23b859f2ca042e6d57f6e417a971df6eac071bc0bb6cce8f804977abf361f"
+    "hash": "e90288de24002fc913a985340bdc7a8e198e3725b84a1edba7e490fa3d0b09f2"
    }
   }
  },
